--- a/speaknsee.html
+++ b/speaknsee.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+body {
+    background-color: lightblue;
+}
+
+h1 {
+    color: white;
+    text-align: center;
+}
+
+p {
+    font-family: verdana;
+    font-size: 20px;
+}
 	<title>Speech Recognition</title>
-	<meta charset="UTF-24">
+	<meta charset="UTF-8">
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
   <script type="text/javascript" src="/js/speechRecognition.js"></script>
   <script type="text/javascript" src="/js/controller.js"></script>
