--- a/speaknsee.html
+++ b/speaknsee.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<style>
 body {
     background-color: lightblue;
 }
@@ -14,6 +15,7 @@ p {
     font-family: verdana;
     font-size: 20px;
 }
+	</style>
 	<title>Speech Recognition</title>
 	<meta charset="UTF-8">
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
