add hebrew option

--- a/speaknsee.html
+++ b/speaknsee.html
@@ -24,6 +24,10 @@ p {
 </head>
 <body>
   <p>
+	  <select id="mylang">
+  <option value="English">English</option>
+  <option value="Hebrew">Hebrew</option>
+</select>
    <button id="capture" value="true">Start</button>
    <span>Status: </span>
    <span id="status">Idle</span>
