add x-webkit-speech html element (no javascript code needed?)

--- a/speaknsee.html
+++ b/speaknsee.html
@@ -30,5 +30,12 @@ p {
    <br><br>
    <textarea id="output" rows=10 placeholder="result"></textarea>
  </p>
+<p>
+   <button id="capture2" value="true">Start2</button>
+   <span>Status: </span>
+   <span id="status">Idle</span>
+   <br><br>
+	<input type="text" x-webkit-speech>
+ </p>
 </body>
 </html>
