--- a/text2image.html
+++ b/text2image.html
@@ -14,7 +14,7 @@
             $(function(){
                 var opts = {
                     method: 'flickr.photos.search',
-                    api_key: 'c86eac4d6a2c2263b01ef7d3e665bf77',
+                    api_key: '8fa1f864f11a3f6f2d7cbd167f4d6207',
                     sort: 'relevance',
                     text: 'apple',
                     extras: 'url_m',
@@ -48,3 +48,11 @@
     <body>
     </body>
 </html>
+//Done! Here's the API key and secret for your new app:
+//	text2image
+//Key:
+//8fa1f864f11a3f6f2d7cbd167f4d6207
+//
+//Secret:
+//1c9beab725fe7396
+//
