--- a/text2image.html
+++ b/text2image.html
@@ -16,7 +16,7 @@
                     method: 'flickr.photos.search',
                     api_key: '8fa1f864f11a3f6f2d7cbd167f4d6207',
                     sort: 'relevance',
-                    text: 'apple',
+                    text: 'תפוח',
                     extras: 'url_m',
                     per_page: 1,
                     format: 'json',
