--- a/speaknsee.html
+++ b/speaknsee.html
@@ -28,6 +28,13 @@ p {
    <span>Status: </span>
    <span id="status">Idle</span>
    <br><br>
+<select name="mylang">
+  <option value="en-US">English</option>
+  <option value="he-IL">Hebrew</option>
+  <option value="sp-ES">Spanish</option>
+</select>
+Try it Yourself »
+
    <textarea id="output" rows=10 placeholder="result"></textarea>
  </p>
 <p>
