--- a/speaknsee.html
+++ b/speaknsee.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="he-IL">
 <head>
 <style>
 body {
@@ -12,37 +12,60 @@ h1 {
 }
 
 p {
-    font-family: verdana;
+    font-family: david;
     font-size: 40px;
 }
 	</style>
-	<title>Speech Recognition</title>
-	<meta charset="UTF-8">
+	<title>זיהוי שפמSpeech Recognition</title>
+	<meta charset="UTF-16">
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Bootstrap 101 Template</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
   <script type="text/javascript" src="/js/speechRecognition.js"></script>
+   <script type="text/javascript" src="/js/getPhoto.js"></script>
   <script type="text/javascript" src="/js/controller.js"></script>
 </head>
 <body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+<div class="container-fluid">
   <p>
-   <button id="capture" value="true">Start</button>
-   <span>Status: </span>
-   <span id="status">Idle</span>
+   <button id="capture" value="true">התחל</button>
+   <span>מצב: </span>
+   <span id="status">ישן</span>
    <br><br>
 <select name="mylang">
   <option value="en-US">English</option>
   <option value="he-IL">Hebrew</option>
   <option value="sp-ES">Spanish</option>
 </select>
-Try it Yourself »
-
-   <textarea id="output" rows=10 placeholder="result"></textarea>
+<br>
+Result:<textarea id="output0" rows=1 cols=20 placeholder="result"></textarea>
+ <textarea id="output1" rows=1 cols=20 placeholder="result"></textarea>
+<textarea id="output2" rows=1 cols=20 placeholder="result"></textarea>
+<textarea id="output3" rows=1 cols=20 placeholder="result"></textarea>
  </p>
-<p>
-   <button id="capture2" value="true">Start2</button>
-   <span>Status: </span>
-   <span id="status">Idle</span>
-   <br><br>
-	<input type="text" x-webkit-speech>
- </p>
+ </div>
+ <div class="container-fluid">
+Pictures
+  <!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
+<div class="row show-grid">
+  <row class="col-md-4"><</row><row class="col-md-4">.col-md-4</row><row class="row-md-4">.col-md-4</row>
+</div>
+</div>
 </body>
 </html>
