Add Refresh Button

--- a/speaknsee.html
+++ b/speaknsee.html
@@ -73,6 +73,7 @@ p {
   <option value="en-US">English</option>
   <option value="sp-ES">Spanish</option>
 </select>
+	<button id="refresh">Refresh<button>
 <br>
 <textarea id="output0" rows=1 cols=10 placeholder="result"></textarea>
 <textarea id="output1" rows=1 cols=11 placeholder="result"></textarea>
@@ -80,7 +81,7 @@ p {
 <textarea id="output3" rows=1 cols=10 placeholder="result"></textarea>
  </p>
  </div>
- <div class="container-fluid">
+ <div id="pictures" class="container-fluid">
 Pictures
   <!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
   
