--- a/speaknsee.html
+++ b/speaknsee.html
@@ -40,7 +40,7 @@ p {
 	</style>
 	<h1>לוח תקשורת - SpeakNSee</>
 	<meta charset="UTF-16">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
    
