--- a/trythis.html
+++ b/trythis.html
@@ -4,6 +4,7 @@
   .speech input {border: 0; width: 240px; display: inline-block; height: 30px;}
   .speech img {float: right; width: 40px }
 </style>
+<link rel="icon" href="/favicon.ico">
 
 <!-- Search Form -->
 <form id="labnol" method="get" action="https://www.google.com/search">
